# ocaml_learnings

chorus/: chorus.install  chorus.opam  counter.ml  counter.mli  freq.ml  ladays.mli
ocaml_cmd/: Makefile  ocaml_cmd.opam
ocaml_lwt_dune/: Makefile  ocaml_lwt_dune.install
pdfscrap/: Makefile  pdfscrap.opam
